--- a/index.html
+++ b/index.html
@@ -2,4 +2,12 @@
 	<h1>Hola</h1>
 	<h2>Mes codi</h2>
 	<h3>Tercera prova</h3>
+	
+	<div>
+		<ul>
+			<li></li>
+			<li></li>
+			<li></li>
+		</ul>
+	</div>
 </html>
